--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <!-- prettier-ignore -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- prettier-ignore -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- prettier-ignore -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- prettier-ignore -->
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="bg-blur"></div>
@@ -71,7 +77,10 @@
               <i class="fas fa-external-link-alt"></i>
               Live Demo
             </a>
-            <a href="https://github.com/zohidjondev/password-generator" target="_blank">
+            <a
+              href="https://github.com/zohidjondev/password-generator"
+              target="_blank"
+            >
               <i class="fas fa-external-link-alt"></i>
               Source Code
             </a>
