Update: Fix the Project description - Simple Password Generator. Vanilla JavaScript, HTML, and CSS.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="project-card">
             <h3>Password Generator</h3>
             <p style="color: #8b949e; margin-bottom: 1rem">
-              Modern web application with React & TypeScript
+              Simple Password Generator. Vanilla JavaScript, HTML, and CSS.
             </p>
             <a href="https://password.zohidjohn.uz/" target="_blank">
               <i class="fas fa-external-link-alt"></i>
