--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <span class="skill-tag">HTML</span>
             <span class="skill-tag">CSS</span>
             <span class="skill-tag">JavaScript</span>
+            <span class="skill-tag">Linux/Ubuntu</span>
+            <span class="skill-tag">Git/GitHub</span>
+            <span class="skill-tag">Bash</span>
         </div>
       </section>
 
