--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <span>Email</span>
           </a>
           <a
-            href="https://github.com/zohidjondev"
+            href="https://github.com/zohidjohn"
             target="_blank"
             class="contact-link"
           >
