--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <!-- Favicon links remain the same -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -14,7 +21,7 @@
         <a href="#home" class="nav-brand">Z</a>
         <div class="nav-links">
           <a href="#about">About</a>
-          <a href="#projects">Work</a>
+          <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
         </div>
       </nav>
@@ -40,24 +47,28 @@
             <span class="skill-tag">Linux/Ubuntu</span>
             <span class="skill-tag">Git/GitHub</span>
             <span class="skill-tag">Bash</span>
+            <span class="skill-tag">Node.js</span>
+            <span class="skill-tag">Express.js</span>
+            <span class="skill-tag">REST API</span>
+            <span class="skill-tag">SDLC</span>
         </div>
       </section>
 
       <section id="projects" class="section">
-        <h2 class="section-title">Work</h2>
+        <h2 class="section-title">Projects</h2>
         <div class="project-card">
           <div class="project-header">
-            <h3>Password Generator</h3>
+            <h3>Google.com</h3>
             <div class="project-links">
               <a
-                href="https://password.zohidjohn.uz/"
+                href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
                 target="_blank"
                 class="icon-link"
               >
                 <i class="fas fa-external-link-alt"></i>
               </a>
               <a
-                href="https://github.com/zohidjondev/password-generator"
+                href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
                 target="_blank"
                 class="icon-link"
               >
@@ -65,7 +76,7 @@
               </a>
             </div>
           </div>
-          <p class="project-description">Secure password generation tool</p>
+          <p class="project-description">Remake of Google.com using HTML, CSS and JavaScript. </p>
         </div>
       </section>
 
