docs(projects): add unified metadata object for Tools for Myself
- Consolidate individual tools (IELTS Timer, Text Formatter, UNO Score, Homework Grade Calculator, IELTS Score Calculator, Anki Flashcard Maker)
- Create a single project object with summary, details, demo, repo, and tech stack
- Treat the collection as one open-source project on the portfolio

--- a/index.html
+++ b/index.html
@@ -767,16 +767,23 @@
       // ---- Projects data ----
       const projects = [
         {
-          title: "Homework Grade Calculator",
+          title: "Tools for Myself",
           summary:
-            "Minimal tool to convert total homework tasks into grade cutoffs with copy-ready comment.",
-          tech: ["HTML", "CSS", "JS"],
+            "A minimal collection of personal web tools — from IELTS score helpers to flashcard generators — all unified in one hub.",
+          tech: ["HTML", "CSS", "JavaScript"],
           status: "open-source",
-          demo: "https://zohidjohn.github.io/homework-grade-calculator/",
-          repo: "https://github.com/zohidjohn/homework-grade-calculator",
-          details: `A super-lightweight UI inspired by cards and badges.
-          Features live thresholds (A/B/C/D/E), Inter font, and a one-click Classroom comment copier. Built with vanilla HTML/CSS/JS and deployed on GitHub Pages.`,
-          image: "/images/projects/homework-grade-calculator.jpg",
+          demo: "https://tools.zohidjohn.uz/",
+          repo: "https://github.com/zohidjohn/tools-for-myself",
+          details: `A distraction-free utility suite with a consistent Inter-based UI.
+  Includes:
+  • IELTS Timer — Reading timer with 40/20/0-min audio cues and a progress ring.
+  • Text Formatter — Repeat and clean up text with one-click copy and dark mode toggle.
+  • UNO Score Tracker — Uzbek UI score tracker with save/load JSON and celebration screen.
+  • Homework Grade Calculator — Live A/B/C/D/E thresholds and ready-to-copy Classroom comment.
+  • IELTS Score Calculator — Convert raw answers into bands, calculate Writing Task 1/2, and Overall score.
+  • AnkiWeb Flashcard Maker — Import JSON word lists and render study-ready flashcards.
+  Built entirely with vanilla HTML/CSS/JS and deployed on GitHub Pages.`,
+          image: "/images/projects/tools-for-myself.jpg",
         },
       ];
 
